--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -36,7 +36,7 @@
 			<input name="password" class="form-control" placeholder="Create password" type="password">
 		</div>                             
 		<div class="form-group">
-			<button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
+			<button type="submit" class="btn btn-primary btn-block"> Login  </button>
 		</div>
 		<p class="text-center">You Have no account? <a href="{% url 'signup' %}">Sign In</a> </p>                                                                 
 	</form>
