--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOCIAL BOOK</title>
+    <title></title>
     <!-- ................CUSTOM CSS LINK................... -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
@@ -40,7 +40,7 @@
                     </div>
                     <div>
                         <p>{{user}}</p>
-                        <a href="#">See your profile</a>
+                        <a href="">See your profile</a>
                     </div>
                 </div>
                 <hr>
@@ -196,15 +196,19 @@
                  </form> 
                 <!--..................feeds..start...............................-->
                 <div class="feeds">
-                    {% for i in post %}
+                    {% for i in post reversed %}
                     <div class="feed">
                         <div class="head">
                             <div class="user">
                                 <div class="profile-phots">
-                                    <img src="{{user_profile.profileimg.url}}" alt="">                                    
+                                    <a href="/profile/{{i.user}}">
+                                        <img src="{{user_profile.profileimg.url}}" alt=""> 
+                                    </a>                                   
                                 </div>
                                 <div class="info">
-                                    <h3>{{i.user}}</h3>
+                                    <a href="/profile/{{i.user}}">
+                                        <h3>{{i.user}}</h3>
+                                    </a>
                                     <small>cannada, 15 minutes ago</small>
                                 </div>                               
                             </div>
@@ -217,7 +221,7 @@
                             </div>
                             <div class="action-buttons">
                                 <div class="inter-action-button">
-                                    <span><img src="{% static 'icon/heart.svg' %}" class="icon2"></span>
+                                    <a href="/like-post?post_id={{i.id}}"><span><img src="{% static 'icon/heart.svg' %}" class="icon2"></span></a>
                                     <span><img src="{% static 'icon/chat-dots.svg' %}" class="icon2"></span>
                                     <span><img src="{% static 'icon/share.svg' %}" class="icon2"></span>
                                 </div>
@@ -229,7 +233,13 @@
                                 <span><img src="{% static 'img/p2.jpg' %}" alt=""></span>
                                 <span><img src="{% static 'img/p4.png' %}" alt=""></span>
                                 <span><img src="{% static 'img/p5.png' %}" alt=""></span>
-                                <p>like by <b>deniel rivar </b> and<b> 105 others pepoles</b></p>                                                                  
+                                {% if i.no_of_likes == 0 %}
+                                <p>No like</p>
+                                {% elif i.no_of_likes == 1 %}
+                                <p>like by <b>{{i.no_of_likes}} </b>Person<b> </b></p>
+                                {% else %}
+                                <p>like by <b>{{i.no_of_likes}} </b>People<b> </b></p>
+                                {% endif %}            
                             </div>
                             <div class="caption">
                                 <p><b>angela rose.</b>{{i.caption}} <span class="hash-teg">#lifestyle</span></p>
